0.9.2/_sources/gallery/3D_vectors_through_time.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/3D_vectors_through_time.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_3D_vectors_through_time.py:


3D vector field and image across time
=====================================

This example is from a mechanical test on a granular material, where multiple 3D volume have been acquired using x-ray tomography during axial loading.
We have used [`spam`](https://www.spam-project.dev/) to label individual particles (with watershed and some tidying up manually), and these particles are tracked through time with 3D "discrete" volume correlation *incrementally*:
t0 → t1 and then t1 → t2.
Although we're also measuring rotations (and strains), but here we're interested to visualise the displacement field on top of the image to spot tracking errors.

.. tags:: visualization-nD

.. GENERATED FROM PYTHON SOURCE LINES 12-19

.. code-block:: Python


    import numpy as np
    import pooch
    import tifffile

    import napari








.. GENERATED FROM PYTHON SOURCE LINES 20-29

Input data
-----------

Input data are therefore:
  - A series of 3D greyscale images
  - A series of measured transformations between subsequent pairs of images
  - We also have consistent labels through time which could also be visualised but are not here

Let's download it!

.. GENERATED FROM PYTHON SOURCE LINES 29-50

.. code-block:: Python


    grey_files = sorted(pooch.retrieve(
        "doi:10.5281/zenodo.17668709/grey.zip",
        known_hash="md5:760be2bad68366872111410776563760",
        processor=pooch.Unzip(),
        progressbar=True
    ))

    # Load individual 3D images as a 4D with a list comprehension, skipping last one
    # result is a T, Z, Y, X 16-bit array
    greys = np.array([tifffile.imread(grey_file) for grey_file in grey_files[0:-1]])

    # load incremental TSV tracking files from spam-ddic, [::2] is to skip VTK files also in folder
    tracking_files = sorted(pooch.retrieve(
        "doi:10.5281/zenodo.17668709/ddic.zip",
        known_hash="md5:2d7c6a052f53b4a827ff4e4585644fac",
        processor=pooch.Unzip(),
        progressbar=True
    ))[::2]






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Downloading...
    From (original): https://drive.google.com/uc?id=1UZEoOtHMMeJMXVoWr6IZraZnvQe8ExNJ
    From (redirected): https://drive.google.com/uc?id=1UZEoOtHMMeJMXVoWr6IZraZnvQe8ExNJ&confirm=t&uuid=8fe109b6-1bf7-42cf-9d6f-94309f44cf9e
    To: /home/runner/work/docs/docs/.cache/pooch/tmp27sure54
      0%|          | 0.00/549M [00:00<?, ?B/s]      0%|          | 524k/549M [00:00<02:49, 3.24MB/s]      0%|          | 2.10M/549M [00:00<01:01, 8.90MB/s]      1%|          | 6.82M/549M [00:00<00:43, 12.6MB/s]      2%|▏         | 11.0M/549M [00:00<00:33, 16.2MB/s]      2%|▏         | 13.1M/549M [00:00<00:33, 15.8MB/s]      3%|▎         | 17.3M/549M [00:01<00:30, 17.3MB/s]      4%|▍         | 21.5M/549M [00:01<00:24, 21.6MB/s]      5%|▍         | 25.7M/549M [00:01<00:23, 22.5MB/s]      5%|▌         | 29.9M/549M [00:01<00:25, 20.2MB/s]      6%|▌         | 34.1M/549M [00:01<00:26, 19.2MB/s]      7%|▋         | 40.4M/549M [00:02<00:22, 22.9MB/s]      9%|▉         | 48.8M/549M [00:02<00:15, 33.3MB/s]     10%|▉         | 53.0M/549M [00:02<00:16, 29.4MB/s]     10%|█         | 57.1M/549M [00:02<00:17, 27.4MB/s]     12%|█▏        | 63.4M/549M [00:02<00:16, 30.1MB/s]     12%|█▏        | 67.6M/549M [00:02<00:15, 30.1MB/s]     14%|█▍        | 76.0M/549M [00:03<00:16, 28.9MB/s]     15%|█▌        | 84.4M/549M [00:03<00:13, 35.1MB/s]     16%|█▌        | 88.6M/549M [00:03<00:13, 33.3MB/s]     19%|█▊        | 102M/549M [00:03<00:08, 52.1MB/s]      20%|█▉        | 110M/549M [00:03<00:11, 38.8MB/s]     21%|██▏       | 117M/549M [00:04<00:09, 45.6MB/s]     23%|██▎       | 126M/549M [00:04<00:08, 47.6MB/s]     25%|██▍       | 135M/549M [00:04<00:07, 53.6MB/s]     26%|██▋       | 144M/549M [00:04<00:06, 62.3MB/s]     28%|██▊       | 152M/549M [00:04<00:07, 55.0MB/s]     29%|██▉       | 160M/549M [00:04<00:06, 57.8MB/s]     30%|███       | 167M/549M [00:04<00:06, 59.9MB/s]     32%|███▏      | 174M/549M [00:04<00:06, 61.3MB/s]     33%|███▎      | 180M/549M [00:05<00:07, 51.2MB/s]     35%|███▍      | 191M/549M [00:05<00:07, 46.3MB/s]     37%|███▋      | 200M/549M [00:05<00:06, 54.3MB/s]     38%|███▊      | 207M/549M [00:05<00:07, 44.2MB/s]     40%|████      | 221M/549M [00:05<00:06, 50.1MB/s]     42%|████▏     | 231M/549M [00:06<00:05, 59.4MB/s]     43%|████▎     | 238M/549M [00:06<00:05, 60.1MB/s]     45%|████▌     | 247M/549M [00:06<00:04, 67.6MB/s]     47%|████▋     | 255M/549M [00:06<00:04, 62.6MB/s]     48%|████▊     | 264M/549M [00:06<00:04, 68.8MB/s]     50%|████▉     | 272M/549M [00:06<00:04, 62.7MB/s]     51%|█████     | 280M/549M [00:06<00:04, 65.9MB/s]     52%|█████▏    | 288M/549M [00:06<00:04, 64.6MB/s]     54%|█████▎    | 295M/549M [00:07<00:04, 60.6MB/s]     56%|█████▌    | 305M/549M [00:07<00:04, 56.0MB/s]     57%|█████▋    | 315M/549M [00:07<00:03, 66.3MB/s]     59%|█████▉    | 322M/549M [00:07<00:03, 62.5MB/s]     61%|██████    | 334M/549M [00:07<00:02, 76.2MB/s]     63%|██████▎   | 343M/549M [00:07<00:02, 68.9MB/s]     65%|██████▌   | 357M/549M [00:07<00:02, 86.5MB/s]     67%|██████▋   | 366M/549M [00:08<00:02, 65.1MB/s]     68%|██████▊   | 374M/549M [00:08<00:02, 61.2MB/s]     70%|██████▉   | 382M/549M [00:08<00:03, 55.1MB/s]     72%|███████▏  | 394M/549M [00:08<00:02, 68.8MB/s]     73%|███████▎  | 402M/549M [00:08<00:03, 47.4MB/s]     75%|███████▌  | 412M/549M [00:08<00:02, 51.8MB/s]     77%|███████▋  | 420M/549M [00:09<00:02, 56.7MB/s]     78%|███████▊  | 427M/549M [00:09<00:02, 58.7MB/s]     79%|███████▉  | 434M/549M [00:09<00:01, 60.7MB/s]     82%|████████▏ | 447M/549M [00:09<00:01, 68.1MB/s]     83%|████████▎ | 455M/549M [00:09<00:01, 53.7MB/s]     85%|████████▍ | 466M/549M [00:09<00:01, 58.7MB/s]     88%|████████▊ | 481M/549M [00:10<00:01, 66.4MB/s]     89%|████████▉ | 488M/549M [00:10<00:00, 60.9MB/s]     90%|█████████ | 495M/549M [00:10<00:01, 43.1MB/s]     93%|█████████▎| 512M/549M [00:10<00:00, 56.8MB/s]     95%|█████████▍| 519M/549M [00:10<00:00, 54.1MB/s]     97%|█████████▋| 535M/549M [00:10<00:00, 73.4MB/s]     99%|█████████▉| 544M/549M [00:11<00:00, 62.1MB/s]    100%|██████████| 549M/549M [00:11<00:00, 48.4MB/s]
    Downloading...
    From: https://drive.google.com/uc?id=1-AAkBUXykxXG3Ve20jPk43co-m3f9ZWB
    To: /home/runner/work/docs/docs/.cache/pooch/tmpt730db3y
      0%|          | 0.00/6.72M [00:00<?, ?B/s]      8%|▊         | 524k/6.72M [00:00<00:01, 3.58MB/s]     39%|███▉      | 2.62M/6.72M [00:00<00:00, 11.6MB/s]    100%|██████████| 6.72M/6.72M [00:00<00:00, 20.6MB/s]




.. GENERATED FROM PYTHON SOURCE LINES 51-56

Collect data together for napari
----------------------------------
 We will loop through all the images in order to prepare the necessary data structure for napari

 These variables are going to contain coordinates, displacements and lengths (for colouring vectors) for all timesteps

.. GENERATED FROM PYTHON SOURCE LINES 56-116

.. code-block:: Python

    coords_all = []
    disps_all = []
    lengths_all = []

    for t, tracking_file in enumerate(tracking_files):
        # load the indicator for convergence
        returnStatus = np.genfromtxt(tracking_file, skip_header=1, usecols=(19))

        # Load coords and displacements, keeping only converged results (returnStatus==2)
        coords = np.genfromtxt(tracking_file, skip_header=1, usecols=(1,2,3))[returnStatus==2]
        disps = np.genfromtxt(tracking_file, skip_header=1, usecols=(4,5,6))[returnStatus==2]

        # Compute lengths in order to colour vectors
        lengths = np.linalg.norm(disps, axis=1)

        # Prepend an extra dimension to coordinates to place them in time, and fill it with the incremental t
        coords = np.hstack([np.ones((coords.shape[0],1))*t, coords])
        # Preprend zeros to the displacements (the "end" of the vector), since they do not displace through time
        disps = np.hstack([np.zeros((disps.shape[0],1)), disps])

        # Add to lists
        coords_all.append(coords)
        disps_all.append(disps)
        lengths_all.append(lengths)

    # Concatenate into arrays
    coords_all = np.concatenate(coords_all)
    disps_all = np.concatenate(disps_all)
    lengths_all = np.concatenate(lengths_all)
    # Stack this into an array of size N (individual points) x 2 (vector start and length) x 4 (tzyx)
    coords_displacements_all = np.stack([coords_all, disps_all], axis=1)

    viewer = napari.Viewer(ndisplay=3)

    viewer.add_image(
        greys,
        contrast_limits=[15000, 50000],
        rendering="attenuated_mip",
        attenuation=0.333
    )

    viewer.add_vectors(
      coords_displacements_all,
      vector_style='arrow',
      length=1,
      properties={'disp_norm': lengths_all},
      edge_colormap='plasma',
      edge_width=3,
    )

    viewer.scene.camera.angles = (0,0,-97)
    viewer.scene.camera.orientation = ('away','up','right')
    viewer.dims.current_step = (11,199, 124, 124)
    viewer.fit_to_view()

    # enable thick slicing on spatial dims so vectors are visible in 2D
    viewer.dims.thickness = (0, 50, 50, 50)

    if __name__ == '__main__':
        napari.run()



.. image-sg:: /gallery/images/sphx_glr_3D_vectors_through_time_001.png
   :alt: 3D vectors through time
   :srcset: /gallery/images/sphx_glr_3D_vectors_through_time_001.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 28.616 seconds)


.. _sphx_glr_download_gallery_3D_vectors_through_time.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 3D_vectors_through_time.ipynb <3D_vectors_through_time.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 3D_vectors_through_time.py <3D_vectors_through_time.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: 3D_vectors_through_time.zip <3D_vectors_through_time.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
